resolved the alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
   padding: 2rem;
   text-align: center;
 }
-
+body {
+  overflow: hidden;
+}
 .main_container {
   position: relative;
 }
